# ml_repo

./: .gitignore  README.md
fine-tune-demo/: finetune_demo.ipynb  finetune_demo.py
fine-tune-demo/dataset/: finetune_dataset1.txt
gpt_chatbot/jupyter/: 0.prepare_chatbot_training_dataset.ipynb
gpt_chatbot/jupyter/.ipynb_checkpoints/: 0.prepare_chatbot_training_dataset-checkpoint.ipynb
learn_data/learn_es/: readme.md
learn_data/learn_es/code/bulk-ingest/: requirements.txt
learn_data/learn_es/env/: clean.sh  docker-compose.yaml  readme.md  restart_cluster.sh
learn_facenetv2/: .gitignore  .gitmodules  README.md  __init__.py
learn_facenetv2/facenet/: mtcnn.py  onet.py  pnet.py  rnet.py
learn_facenetv2/facenet/utils/: detect_face.py  download.py  training.py
learn_facenetv2/models/: detect_face.py
learn_facenetv2/unittests/: action_requirements.txt  test_detect_face.py  test_download.py  test_pnet.py  test_rnet.py
learn_keras/: README.md
learn_keras/1_about_keras/: about_keras.md
learn_keras/2_getting_started/1_introduction_to_keras_for_engineers/: 1_introduction_to_keras_for_engineers.md  1_introduction_to_keras_for_engineers.py
learn_keras/about_keras/: about_keras.py
learn_mathematics/: readme.md  setup.sh
learn_mathematics/calculus/home/jovyan/work/.ipynb_checkpoints/: C2_W1_Assignment-checkpoint.ipynb
learn_mathematics/calculus/week1/: C2_W1_Assignment.ipynb
learn_mathematics/calculus/week2/: C2_W2_Assignment.ipynb
learn_mathematics/calculus/week3/: C2_W3_Assignment.ipynb
learn_mathematics/linear_algebra/week2/: week2_homework.ipynb
learn_mathematics/week1/: numpy_introduce.ipynb  week1_homework.ipynb
learn_mathematics/week2/: week2_practices.ipynb
learn_mathematics/week2/.ipynb_checkpoints/: week2_homework-checkpoint.ipynb
learn_openai/: README.md
learn_openai/fine-tune-demo/: finetune_demo.py
learn_torch/: CMakeLists.txt  build.sh  readme.md
learn_torch/linear_regression/: CMakeLists.txt  build.sh  lr_app.cpp
